--- a/front/src/index.css
+++ b/front/src/index.css
@@ -10,6 +10,10 @@
   --secondary: #8da861;
   --text: #121212;
   --bg: #fff;
+  --white-primary: #fff;
+  --success: green;
+  --danger: danger;
+  --info: blue;
 }
 
 a {
