--- a/front/src/components/typography/typography.css
+++ b/front/src/components/typography/typography.css
@@ -25,3 +25,14 @@
 .h6 {
     font-size: 1em;
 }
+
+@media screen and (max-width: 768px) {
+    .h1{
+        font-size: 20px;
+        font-weight: bold;
+    }
+
+    .h6{
+        font-size: 13px;
+    }
+}
