--- a/front/src/payment/payement.css
+++ b/front/src/payment/payement.css
@@ -7,7 +7,7 @@
   background-size: cover;
 }
 .payment .message h1 {
-  color:#fff;
+  color:var(--white-primary);
 }
 .payment .message img {
   width: 345px;
