--- a/front/src/index.css
+++ b/front/src/index.css
@@ -9,11 +9,11 @@
   --primary: #688e43;
   --secondary: #8da861;
   --text: #121212;
-  --bg: #b0b0b0;
   --bg: #fff;
   --bg2:#BBBBBB;
   --text-light: #a1a1a1;
   --white-primary: #fff;
+  --white-secondary: #e2e1e1;
   --success: green;
   --danger: danger;
   --info: blue;
