--- a/front/src/alert/list-alert/list-alert.css
+++ b/front/src/alert/list-alert/list-alert.css
@@ -1,9 +1,29 @@
 .list-content {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+
   justify-content: center;
-  background-color: var(--secondary);
+  /* background-color: var(--secondary); */
+  background-image: url(assets/pattern.svg);
   width: 100%;
   padding: 14px;
+
+  .lc-text{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding:15px 0; 
+    color: var(--text);
+
+    H1{
+      color: antiquewhite;
+      margin-bottom: 15px;
+    }
+    p{
+      margin-bottom: 10px;
+    }
+  }
 
   .lc-container{
     display: grid;
@@ -15,15 +35,19 @@
 
     .lc-box {
       display: flex;
+      /* align-items: center; */
+      /* justify-content: center; */
       gap: 15px;
       width: 100%;
       height: 200px;
-  
+      
       border-radius: 15px;
       background-color: var(--bg);
+      box-shadow: 10px 8px 21px -11px rgba(39,51,49,1);;
       align-items: center;
       padding-left: 20px;
       
+
       .lc-img{
         position: relative;
         .img {
