--- a/front/src/home/home.css
+++ b/front/src/home/home.css
@@ -34,19 +34,17 @@
     justify-content: space-between;
     align-items: center;
     height: 10vh;
-    padding: 10px;
+    padding: 40px;
 }
 
-.logo{
-    margin-left: 10%;
-    margin-top: 10vh;
-}
 
 .nameLogo{
     font-size: 25px;
     font-family: "poppins", sans-serif;
     font-weight: bold;
 }
+
+
 
 .maka{
     color: #688e43;
@@ -58,7 +56,6 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    margin-top: 30vh;
 }
 
 .titre{
@@ -66,13 +63,15 @@
     font-weight: bold;
     margin-left: 8%;
     line-height: 1.3;
+    margin-top: 30vh;
+
 }
 
 .tirer{
     width: 15%;
     border-bottom: 5px solid #ff8906;
     position: absolute;
-    margin-top: 19vh;
+    margin-top: 48vh;
     margin-left: 8%;
 }
 
@@ -82,11 +81,111 @@
     color: #879e67;
 }
 
+.btnListe{
+    margin-left: 8%;
+    width: 20%;
+    display: flex;
+    justify-content: space-around;
+}
+
 .btnAlert{
     margin-top: 3vh;
     width: 22%;
     display: flex;
     justify-content: center;
+}
+
+.btnPyement{
+    margin-top: 3vh;
+    display: flex;
+    justify-content: center;
+}
+
+.statistique{
+    text-align: center;
+    margin-top: 8vh;
+}
+
+.titreState{
+    color: #072807;
+}
+
+.liste{
+    justify-content: space-around;
+    display: flex;
+    margin-top: 8vh;
+
+}
+
+.NombreCamion{
+    width: 30%;
+    height: 20vh;
+    border: 2px solid #688e43;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.textCams{
+    width: 33%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.textDechet{
+    width: 33%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.textAlert{
+    width: 33%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.NombreDechet{
+    width: 30%;
+    height: 20vh;
+    border: 2px solid #688e43;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.NombreAlert{
+    width: 30%;
+    height: 20vh;
+    border: 2px solid #688e43;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.nbrs{
+    margin-top: 2vh;
+    font-size: 50px;
+    font-weight: bold;
+    color: #688e43;
+    font-family: 'poppins', sans-serif;
 }
 
 @media (width <= 1280px) {
@@ -100,7 +199,7 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        margin-top: 15%;
+        margin-top: 0%;
     }
     
     .titre{
@@ -114,7 +213,7 @@
         width: 20%;
         border-bottom: 6px solid #ff8906;
         position: absolute;
-        margin-top: 14vh;
+        margin-top: 40vh;
         margin-left: 8%;
     }
     
@@ -127,6 +226,102 @@
     .btnAlert{
        margin-left: 1%;
     }
+
+
+.btnListe{
+    width: 30%;
+}
+
+.liste{
+    justify-content: space-around;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 8vh;
+
+}
+
+.NombreCamion{
+    width: 30%;
+    height: 15vh;
+    border: 2px solid #688e43;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.textCams{
+    width: 33.3%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.textDechet{
+    width: 33.3%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.textAlert{
+    width: 33.3%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.CamionIcons{
+    width: 80%;
+}
+
+.TrashIcons{
+    width: 80%;
+}
+
+.TrashIcons{
+    width: 80%;
+}
+
+.NombreDechet{
+    width: 30%;
+    height: 15vh;
+    border: 2px solid #688e43;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.NombreAlert{
+    width: 30%;
+    height: 15vh;
+    border: 2px solid #688e43;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.nbrs{
+    margin-top: 2vh;
+    font-size: 30px;
+    font-weight: bold;
+    color: #688e43;
+    font-family: 'poppins', sans-serif;
+}
 }
 
 @media (width <= 1024px) {
@@ -140,7 +335,7 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        margin-top: 45%;
+        margin-top: 0%;
     }
     
     .titre{
@@ -154,7 +349,7 @@
         width: 28%;
         border-bottom: 6px solid #ff8906;
         position: absolute;
-        margin-top: 8vh;
+        margin-top: 42vh;
         margin-left: 8%;
     }
     
@@ -167,6 +362,106 @@
     .btnAlert{
        margin-left: 1%;
     }
+
+
+.btnListe{
+    width: 30%;
+}
+
+.liste{
+    justify-content: space-around;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 8vh;
+
+}
+
+.NombreCamion{
+    width: 15%;
+    height: 15vh;
+    border: 2px solid #688e43;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.textCams{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.textDechet{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.textAlert{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.CamionIcons{
+    width: 40%;
+    height: 40%;
+}
+
+.TrashIcons{
+    width: 40%;
+    height: 40%;
+}
+
+.TrashIcons{
+    width: 40%;
+    height: 40%;
+}
+
+.NombreDechet{
+    width: 15%;
+    height: 15vh;
+    border: 2px solid #688e43;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.NombreAlert{
+    width: 15%;
+    height: 15vh;
+    border: 2px solid #688e43;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.nbrs{
+    margin-top: 2vh;
+    font-size: 30px;
+    font-weight: bold;
+    color: #688e43;
+    font-family: 'poppins', sans-serif;
+}
+
 }
 
 
@@ -181,7 +476,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    margin-top: 50%;
+    margin-top: 0%;
 }
 
 .titre{
@@ -196,7 +491,7 @@
     width: 28%;
     border-bottom: 5px solid #ff8906;
     position: absolute;
-    margin-top: 10vh;
+    margin-top: 36.5vh;
     margin-left: 8%;
 }
 
@@ -209,6 +504,105 @@
 .btnAlert{
    margin-left: 7%;
 }
+
+.btnListe{
+    width: 30%;
+}
+
+.liste{
+    justify-content: space-around;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 8vh;
+
+}
+
+.NombreCamion{
+    width: 15%;
+    height: 13vh;
+    border: 2px solid #688e43;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.textCams{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.textDechet{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.textAlert{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.CamionIcons{
+    width: 40%;
+    height: 40%;
+}
+
+.TrashIcons{
+    width: 40%;
+    height: 40%;
+}
+
+.TrashIcons{
+    width: 40%;
+    height: 40%;
+}
+
+.NombreDechet{
+    width: 15%;
+    height: 13vh;
+    border: 2px solid #688e43;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.NombreAlert{
+    width: 15%;
+    height: 13vh;
+    border: 2px solid #688e43;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.nbrs{
+    margin-top: 2vh;
+    font-size: 30px;
+    font-weight: bold;
+    color: #688e43;
+    font-family: 'poppins', sans-serif;
+}
+
 }
 
 @media (width <= 640px) {
@@ -222,7 +616,7 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        margin-top: 50%;
+        margin-top: 0%;
     }
     
     .titre{
@@ -237,8 +631,12 @@
         width: 28%;
         border-bottom: 5px solid #ff8906;
         position: absolute;
-        margin-top: 8vh;
+        margin-top: 40vh;
         margin-left: 8%;
+    }
+
+    .btnListe{
+        width: 70%;
     }
     
     .paraKely{
@@ -249,5 +647,99 @@
     
     .btnAlert{
        margin-left: 7%;
+    }
+
+    .liste{
+        justify-content: space-around;
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 8vh;
+    
+    }
+    
+    .NombreCamion{
+        width: 25%;
+        height: 15vh;
+        border: 2px solid #688e43;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    
+    .textCams{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    
+    .textDechet{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    
+    .textAlert{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+
+    .CamionIcons{
+        width: 40%;
+        height: 40%;
+    }
+    
+    .TrashIcons{
+        width: 40%;
+        height: 40%;
+    }
+
+    .TrashIcons{
+        width: 40%;
+        height: 40%;
+    }
+
+    .NombreDechet{
+        width: 25%;
+        height: 15vh;
+        border: 2px solid #688e43;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    
+    .NombreAlert{
+        width: 25%;
+        height: 15vh;
+        border: 2px solid #688e43;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    
+    .nbrs{
+        margin-top: 2vh;
+        font-size: 50px;
+        font-weight: bold;
+        color: #688e43;
+        font-family: 'poppins', sans-serif;
     }
 }
