--- a/front/src/alert/list-alert/list-alert.css
+++ b/front/src/alert/list-alert/list-alert.css
@@ -4,7 +4,7 @@
   align-items: center;
   /* justify-content: center; */
   /* background-color: var(--secondary); */
-  background-image: url(assets/pattern.svg);
+  background-image: url(assets/bg2.svg);
   background-repeat: repeat;
   width: 100%;
   min-height: 100vh;
@@ -88,7 +88,7 @@
 
       }
       .lc-right {
-        width: 60%;
+        width: 70%;
         /* display: flex; */
       }
 
