--- a/front/src/home/home.css
+++ b/front/src/home/home.css
@@ -53,32 +53,30 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  padding: 40px;
+  margin-top: 20vh;
 }
 
 .titre {
   color: #072807;
   font-weight: bold;
-  margin-left: 8%;
   line-height: 1.3;
-  margin-top: 30vh;
 }
 
 .tirer {
   width: 15%;
   border-bottom: 5px solid #ff8906;
   position: absolute;
-  margin-top: 48vh;
-  margin-left: 8%;
+  margin-top: 17vh;
 }
 
 .paraKely {
-  margin-left: 8%;
   margin-top: -1%;
   color: #879e67;
 }
 
 .btnListe {
-  margin-left: 8%;
+  margin-left: 3%;
   display: flex;
   gap: 12px;
 }
@@ -179,6 +177,62 @@
   font-weight: bold;
   color: #688e43;
   font-family: 'poppins', sans-serif;
+}
+
+.titreAvantage{
+    margin-top: 5vh;
+}
+
+.btnMilay{
+    width: 20%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.classLiText{
+    display: flex;
+    margin-top: 5vh;
+    text-align: justify;
+    width: 90%;
+    padding: 4px;
+    flex-wrap: wrap;
+    margin: auto;
+}
+
+.LiText{
+    width: 20%;
+    font-weight: bold;
+}
+
+.foteur{
+    width: 100%;
+    background-color: #688e43;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 5vh;
+}
+
+.createur{
+    padding: 2%;
+}
+
+.TitreLien{
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.TitreCreateur{
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.reseauSociaux{
+    width: 100%;
+    background-color: #688e43;
+}
+
+.liens{
+    padding: 2%;
 }
 
 @media (width <= 1280px) {
@@ -334,7 +388,7 @@
     width: 28%;
     border-bottom: 6px solid #ff8906;
     position: absolute;
-    margin-top: 42vh;
+    margin-top: 10vh;
     margin-left: 8%;
   }
 
@@ -600,7 +654,7 @@
     width: 28%;
     border-bottom: 5px solid #ff8906;
     position: absolute;
-    margin-top: 40vh;
+    margin-top: 10vh;
     margin-left: 8%;
   }
 
@@ -609,6 +663,7 @@
     color: #62724c;
     margin-top: -5%;
   }
+  
 
   .btnAlert {
     margin-left: 7%;
