--- a/front/src/payment/payement.css
+++ b/front/src/payment/payement.css
@@ -7,7 +7,11 @@
   background-size: cover;
 }
 .payment .message h1 {
-  color:var(--white-primary);
+  font-size: 40px;
+  color: var(--white-primary);
+}
+.payment .message h2 {
+  color: #ffffff;
 }
 .payment .message img {
   width: 345px;
@@ -40,6 +44,10 @@
   width: 100%;
   justify-content: center;
 }
+.payment .form-container .title .title-text {
+  color: rgb(94, 94, 94);
+}
+
 .payment .form-container form {
   display: flex;
   width: 98%;
@@ -78,6 +86,10 @@
 }
 
 @media screen and (max-width: 920px) {
+  .payment .message h1 {
+    font-size: 30px;
+    color: var(--white-primary);
+  }
   .payment .container {
     display: flex;
     flex-direction: column;
@@ -86,12 +98,12 @@
 
   .payment .container .message {
     margin: auto;
-    width: 100%; /* Réduire la largeur du message sur les écrans plus larges */
+    width: 100%;
   }
 
   .payment .form-container {
     width: 90%;
-    margin: auto; /* Réduire la largeur du formulaire sur les écrans plus larges */
+    margin: auto;
   }
 
   .payment .form-container form .item {
@@ -101,15 +113,21 @@
   }
 
   .payment .form-container form .item .item-input {
-    width: 100%; /* Réduire la largeur des champs de saisie pour les aligner correctement sur les écrans plus larges */
+    width: 100%;
   }
 
   .payment .form-container form .item .item-input:last-child {
-    margin-right: 0; /* Supprimer la marge droite du dernier champ de saisie */
+    margin-right: 0;
   }
 
   .payment .message img {
     width: 145px;
     height: 145px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .payment .message h1,
+  h2 {
+    font-size: 22px;
   }
 }
