--- a/front/src/payment/payement.css
+++ b/front/src/payment/payement.css
@@ -3,16 +3,14 @@
 .payment {
   width: 100vw;
   height: 100vh;
-  background-image: url('/back.svg');
+  background-image: url('/patternMety.svg');
   background-size: cover;
 }
 .payment .message h1 {
   font-size: 40px;
   color: var(--white-primary);
 }
-.payment .message h2 {
-  color: #ffffff;
-}
+
 .payment .message img {
   width: 345px;
   height: 345px;
@@ -33,8 +31,8 @@
 }
 .payment .form-container {
   border-radius: 10px;
-  width: 45%;
-  height: 60vh;
+  width: 34%;
+  height: 50vh;
   background-color: #fff;
   display: flex;
   flex-direction: column;
