--- a/front/src/home/home.css
+++ b/front/src/home/home.css
@@ -179,8 +179,13 @@
   font-family: 'poppins', sans-serif;
 }
 
+.avantage{
+    text-align: center;
+}
+
 .titreAvantage{
-    margin-top: 5vh;
+    padding: 5%;
+    color: #072807;
 }
 
 .btnMilay{
@@ -191,7 +196,6 @@
 
 .classLiText{
     display: flex;
-    margin-top: 5vh;
     text-align: justify;
     width: 90%;
     padding: 4px;
@@ -199,9 +203,25 @@
     margin: auto;
 }
 
+.suivi{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.Maps{
+    color: #072807;
+    padding: 5%;
+}
+
 .LiText{
     width: 20%;
     font-weight: bold;
+}
+
+.btnSuivi{
+    margin-top: 3vh;
 }
 
 .foteur{
@@ -210,6 +230,11 @@
     display: flex;
     justify-content: space-around;
     margin-top: 5vh;
+}
+
+.foteurClass{
+    width: 100%;
+    background-color: #688e43;
 }
 
 .createur{
@@ -496,7 +521,7 @@
   }
 }
 
-@media (width <= 767px) {
+@media (width <= 768px) {
   .logo {
     margin-left: 5%;
     margin-top: 1vh;
@@ -520,8 +545,7 @@
   .tirer {
     width: 28%;
     border-bottom: 5px solid #ff8906;
-    position: absolute;
-    margin-top: 36.5vh;
+    margin-top: 6vh;
     margin-left: 8%;
   }
 
