--- a/front/src/home/home.css
+++ b/front/src/home/home.css
@@ -70,6 +70,21 @@
   margin-top: 17vh;
 }
 
+.coloneMaps{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+}
+
+.MapPar{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
 .paraKely {
   margin-top: -1%;
   color: #879e67;
@@ -284,8 +299,16 @@
     width: 20%;
     border-bottom: 6px solid #ff8906;
     position: absolute;
-    margin-top: 40vh;
+    margin-top: 10vh;
     margin-left: 8%;
+  }
+
+  .btnListe{
+    margin-left: 10%;
+  }
+
+  .suivi{
+    width: 90%;
   }
 
   .paraKely {
@@ -413,7 +436,7 @@
     width: 28%;
     border-bottom: 6px solid #ff8906;
     position: absolute;
-    margin-top: 10vh;
+    margin-top: 15vh;
     margin-left: 8%;
   }
 
@@ -510,6 +533,15 @@
     align-items: center;
     flex-wrap: wrap;
     flex-direction: column;
+  }
+
+  .coloneMaps{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .imgMaps{
+    width: 90%;
   }
 
   .nbrs {
@@ -644,6 +676,15 @@
     flex-direction: column;
   }
 
+  .coloneMaps{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .imgMaps{
+    width: 90%;
+  }
+
   .nbrs {
     margin-top: 2vh;
     font-size: 30px;
@@ -776,6 +817,15 @@
     align-items: center;
     flex-wrap: wrap;
     flex-direction: column;
+  }
+
+  .coloneMaps{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .imgMaps{
+    width: 90%;
   }
 
   .nbrs {
