--- a/front/src/home/home.css
+++ b/front/src/home/home.css
@@ -70,24 +70,35 @@
   margin-top: 17vh;
 }
 
-.coloneMaps{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-    gap: 10px;
+.coloneMaps {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  gap: 10px;
 }
 
-.MapPar{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+.MapPar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
+
+.TitreCreateur {
+  color: white;
+  text-decoration: none;
+}
+
+
 
 .paraKely {
   margin-top: -1%;
   color: #879e67;
+}
+
+.liens{
+  color: white !important;
 }
 
 .btnListe {
@@ -194,85 +205,85 @@
   font-family: 'poppins', sans-serif;
 }
 
-.avantage{
-    text-align: center;
+.avantage {
+  text-align: center;
 }
 
-.titreAvantage{
-    padding: 5%;
-    color: #072807;
+.titreAvantage {
+  padding: 5%;
+  color: #072807;
 }
 
-.btnMilay{
-    width: 20%;
-    display: flex;
-    justify-content: space-around;
+.btnMilay {
+  width: 20%;
+  display: flex;
+  justify-content: space-around;
 }
 
-.classLiText{
-    display: flex;
-    text-align: justify;
-    width: 90%;
-    padding: 4px;
-    flex-wrap: wrap;
-    margin: auto;
+.classLiText {
+  display: flex;
+  text-align: justify;
+  width: 90%;
+  padding: 4px;
+  flex-wrap: wrap;
+  margin: auto;
 }
 
-.suivi{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+.suivi {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
-.Maps{
-    color: #072807;
-    padding: 5%;
+.Maps {
+  color: #072807;
+  padding: 5%;
 }
 
-.LiText{
-    width: 20%;
-    font-weight: bold;
+.LiText {
+  width: 20%;
+  font-weight: bold;
 }
 
-.btnSuivi{
-    margin-top: 3vh;
+.btnSuivi {
+  margin-top: 3vh;
 }
 
-.foteur{
-    width: 100%;
-    background-color: #688e43;
-    display: flex;
-    justify-content: space-around;
-    margin-top: 5vh;
+.foteur {
+  width: 100%;
+  background-color: #688e43;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 5vh;
 }
 
-.foteurClass{
-    width: 100%;
-    background-color: #688e43;
+.foteurClass {
+  width: 100%;
+  background-color: #688e43;
 }
 
-.createur{
-    padding: 2%;
+.createur {
+  padding: 2%;
 }
 
-.TitreLien{
-    font-weight: bold;
-    text-decoration: underline;
+.TitreLien {
+  font-weight: bold;
+  text-decoration: underline;
 }
 
-.TitreCreateur{
-    font-weight: bold;
-    text-decoration: underline;
+.TitreCreateur {
+  font-weight: bold;
+  text-decoration: underline;
 }
 
-.reseauSociaux{
-    width: 100%;
-    background-color: #688e43;
+.reseauSociaux {
+  width: 100%;
+  background-color: #688e43;
 }
 
-.liens{
-    padding: 2%;
+.liens {
+  padding: 2%;
 }
 
 @media (width <= 1280px) {
@@ -303,11 +314,11 @@
     margin-left: 8%;
   }
 
-  .btnListe{
+  .btnListe {
     margin-left: 10%;
   }
 
-  .suivi{
+  .suivi {
     width: 90%;
   }
 
@@ -535,12 +546,12 @@
     flex-direction: column;
   }
 
-  .coloneMaps{
+  .coloneMaps {
     display: flex;
     flex-direction: column;
   }
 
-  .imgMaps{
+  .imgMaps {
     width: 90%;
   }
 
@@ -676,12 +687,12 @@
     flex-direction: column;
   }
 
-  .coloneMaps{
+  .coloneMaps {
     display: flex;
     flex-direction: column;
   }
 
-  .imgMaps{
+  .imgMaps {
     width: 90%;
   }
 
@@ -728,7 +739,6 @@
     color: #62724c;
     margin-top: -5%;
   }
-  
 
   .btnAlert {
     margin-left: 7%;
@@ -819,12 +829,12 @@
     flex-direction: column;
   }
 
-  .coloneMaps{
+  .coloneMaps {
     display: flex;
     flex-direction: column;
   }
 
-  .imgMaps{
+  .imgMaps {
     width: 90%;
   }
 
